Add test - cmx-local

--- a/t/Makefile.am
+++ b/t/Makefile.am
@@ -4,6 +4,7 @@ AM_CFLAGS = -I$(top_srcdir) -g
 TESTS = 				\
 	struct-refs			\
 	struct-shareable		\
+	local				\
 	$(NULL)
 
 check_PROGRAMS = 			\
