--- a/Makefile.in
+++ b/Makefile.in
@@ -148,9 +148,9 @@ am__uninstall_files_from_dir = { \
     || { echo " ( cd '$$dir' && rm -f" $$files ")"; \
          $(am__cd) "$$dir" && rm -f $$files; }; \
   }
-am__installdirs = "$(DESTDIR)$(pkgconfigdir)" \
+am__installdirs = "$(DESTDIR)$(m4datadir)" "$(DESTDIR)$(pkgconfigdir)" \
 	"$(DESTDIR)$(cmxincludedir)"
-DATA = $(pkgconfig_DATA)
+DATA = $(m4data_DATA) $(pkgconfig_DATA)
 HEADERS = $(cmxinclude_HEADERS)
 RECURSIVE_CLEAN_TARGETS = mostlyclean-recursive clean-recursive	\
   distclean-recursive maintainer-clean-recursive
@@ -309,13 +309,29 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 ACLOCAL_AMFLAGS = -I aclocal.d ${ACLOCAL_FLAGS}
-AM_CFLAGS = -I$(top_srcdir)
-SUBDIRS = . t
-EXTRA_DIST = \
-	cmx.pc.in 			\
+AM_CFLAGS = \
+	-I$(top_srcdir)			\
 	$(NULL)
 
-pkgconfig_DATA = cmx.pc
+SUBDIRS = \
+	.				\
+	t				\
+	$(NULL)
+
+EXTRA_DIST = \
+	cmx.pc.in			\
+	cmx.m4				\
+	$(NULL)
+
+m4datadir = $(datadir)/aclocal
+m4data_DATA = \
+	cmx.m4				\
+	$(NULL)
+
+pkgconfig_DATA = \
+	cmx.pc 				\
+	$(NULL)
+
 cmxincludedir = $(includedir)/cmx
 cmxinclude_HEADERS = \
 	cmx/cmx.h			\
@@ -371,6 +387,27 @@ $(ACLOCAL_M4):  $(am__aclocal_m4_deps)
 $(am__aclocal_m4_deps):
 cmx.pc: $(top_builddir)/config.status $(srcdir)/cmx.pc.in
 	cd $(top_builddir) && $(SHELL) ./config.status $@
+install-m4dataDATA: $(m4data_DATA)
+	@$(NORMAL_INSTALL)
+	@list='$(m4data_DATA)'; test -n "$(m4datadir)" || list=; \
+	if test -n "$$list"; then \
+	  echo " $(MKDIR_P) '$(DESTDIR)$(m4datadir)'"; \
+	  $(MKDIR_P) "$(DESTDIR)$(m4datadir)" || exit 1; \
+	fi; \
+	for p in $$list; do \
+	  if test -f "$$p"; then d=; else d="$(srcdir)/"; fi; \
+	  echo "$$d$$p"; \
+	done | $(am__base_list) | \
+	while read files; do \
+	  echo " $(INSTALL_DATA) $$files '$(DESTDIR)$(m4datadir)'"; \
+	  $(INSTALL_DATA) $$files "$(DESTDIR)$(m4datadir)" || exit $$?; \
+	done
+
+uninstall-m4dataDATA:
+	@$(NORMAL_UNINSTALL)
+	@list='$(m4data_DATA)'; test -n "$(m4datadir)" || list=; \
+	files=`for p in $$list; do echo $$p; done | sed -e 's|^.*/||'`; \
+	dir='$(DESTDIR)$(m4datadir)'; $(am__uninstall_files_from_dir)
 install-pkgconfigDATA: $(pkgconfig_DATA)
 	@$(NORMAL_INSTALL)
 	@list='$(pkgconfig_DATA)'; test -n "$(pkgconfigdir)" || list=; \
@@ -713,7 +750,7 @@ check: check-recursive
 all-am: Makefile $(DATA) $(HEADERS)
 installdirs: installdirs-recursive
 installdirs-am:
-	for dir in "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(cmxincludedir)"; do \
+	for dir in "$(DESTDIR)$(m4datadir)" "$(DESTDIR)$(pkgconfigdir)" "$(DESTDIR)$(cmxincludedir)"; do \
 	  test -z "$$dir" || $(MKDIR_P) "$$dir"; \
 	done
 install: install-recursive
@@ -767,7 +804,8 @@ info: info-recursive
 
 info-am:
 
-install-data-am: install-cmxincludeHEADERS install-pkgconfigDATA
+install-data-am: install-cmxincludeHEADERS install-m4dataDATA \
+	install-pkgconfigDATA
 
 install-dvi: install-dvi-recursive
 
@@ -813,7 +851,8 @@ ps: ps-recursive
 
 ps-am:
 
-uninstall-am: uninstall-cmxincludeHEADERS uninstall-pkgconfigDATA
+uninstall-am: uninstall-cmxincludeHEADERS uninstall-m4dataDATA \
+	uninstall-pkgconfigDATA
 
 .MAKE: $(am__recursive_targets) install-am install-strip
 
@@ -827,12 +866,13 @@ uninstall-am: uninstall-cmxincludeHEADERS uninstall-pkgconfigDATA
 	install-cmxincludeHEADERS install-data install-data-am \
 	install-dvi install-dvi-am install-exec install-exec-am \
 	install-html install-html-am install-info install-info-am \
-	install-man install-pdf install-pdf-am install-pkgconfigDATA \
-	install-ps install-ps-am install-strip installcheck \
-	installcheck-am installdirs installdirs-am maintainer-clean \
-	maintainer-clean-generic mostlyclean mostlyclean-generic pdf \
-	pdf-am ps ps-am tags tags-am uninstall uninstall-am \
-	uninstall-cmxincludeHEADERS uninstall-pkgconfigDATA
+	install-m4dataDATA install-man install-pdf install-pdf-am \
+	install-pkgconfigDATA install-ps install-ps-am install-strip \
+	installcheck installcheck-am installdirs installdirs-am \
+	maintainer-clean maintainer-clean-generic mostlyclean \
+	mostlyclean-generic pdf pdf-am ps ps-am tags tags-am uninstall \
+	uninstall-am uninstall-cmxincludeHEADERS uninstall-m4dataDATA \
+	uninstall-pkgconfigDATA
 
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
