--- a/Makefile.in
+++ b/Makefile.in
@@ -345,6 +345,7 @@ cmxinclude_HEADERS = \
 	cmx/cmx-struct-refs.h		\
 	cmx/cmx-struct-shareable.h	\
 	cmx/cmx-synchronize.h		\
+	cmx/cmx-synchronize-internal.h	\
 	cmx/cmx-token.h			\
 	$(NULL)
 
