--- a/t/Makefile.in
+++ b/t/Makefile.in
@@ -75,7 +75,8 @@ POST_INSTALL = :
 NORMAL_UNINSTALL = :
 PRE_UNINSTALL = :
 POST_UNINSTALL = :
-TESTS = struct-refs$(EXEEXT) struct-shareable$(EXEEXT) local$(EXEEXT)
+TESTS = struct-refs.t$(EXEEXT) struct-shareable.t$(EXEEXT) \
+	local.t$(EXEEXT)
 check_PROGRAMS = $(am__EXEEXT_1)
 subdir = t
 DIST_COMMON = $(srcdir)/Makefile.in $(srcdir)/Makefile.am \
@@ -88,17 +89,17 @@ am__configure_deps = $(am__aclocal_m4_deps) $(CONFIGURE_DEPENDENCIES) \
 mkinstalldirs = $(install_sh) -d
 CONFIG_CLEAN_FILES =
 CONFIG_CLEAN_VPATH_FILES =
-am__EXEEXT_1 = struct-refs$(EXEEXT) struct-shareable$(EXEEXT) \
-	local$(EXEEXT)
-local_SOURCES = local.c
-local_OBJECTS = local.$(OBJEXT)
-local_LDADD = $(LDADD)
-struct_refs_SOURCES = struct-refs.c
-struct_refs_OBJECTS = struct-refs.$(OBJEXT)
-struct_refs_LDADD = $(LDADD)
-struct_shareable_SOURCES = struct-shareable.c
-struct_shareable_OBJECTS = struct-shareable.$(OBJEXT)
-struct_shareable_LDADD = $(LDADD)
+am__EXEEXT_1 = struct-refs.t$(EXEEXT) struct-shareable.t$(EXEEXT) \
+	local.t$(EXEEXT)
+local_t_SOURCES = local.c
+local_t_OBJECTS = local.$(OBJEXT)
+local_t_LDADD = $(LDADD)
+struct_refs_t_SOURCES = struct-refs.c
+struct_refs_t_OBJECTS = struct-refs.$(OBJEXT)
+struct_refs_t_LDADD = $(LDADD)
+struct_shareable_t_SOURCES = struct-shareable.c
+struct_shareable_t_OBJECTS = struct-shareable.$(OBJEXT)
+struct_shareable_t_LDADD = $(LDADD)
 AM_V_P = $(am__v_P_@AM_V@)
 am__v_P_ = $(am__v_P_@AM_DEFAULT_V@)
 am__v_P_0 = false
@@ -443,7 +444,10 @@ target_alias = @target_alias@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-AM_CFLAGS = -I$(top_srcdir) -g
+AM_CFLAGS = \
+	-I$(top_srcdir)			\
+	$(NULL)
+
 all: all-am
 
 .SUFFIXES:
@@ -482,17 +486,17 @@ $(am__aclocal_m4_deps):
 clean-checkPROGRAMS:
 	-test -z "$(check_PROGRAMS)" || rm -f $(check_PROGRAMS)
 
-local$(EXEEXT): $(local_OBJECTS) $(local_DEPENDENCIES) $(EXTRA_local_DEPENDENCIES) 
-	@rm -f local$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(local_OBJECTS) $(local_LDADD) $(LIBS)
+local.t$(EXEEXT): $(local_t_OBJECTS) $(local_t_DEPENDENCIES) $(EXTRA_local_t_DEPENDENCIES) 
+	@rm -f local.t$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(local_t_OBJECTS) $(local_t_LDADD) $(LIBS)
 
-struct-refs$(EXEEXT): $(struct_refs_OBJECTS) $(struct_refs_DEPENDENCIES) $(EXTRA_struct_refs_DEPENDENCIES) 
-	@rm -f struct-refs$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(struct_refs_OBJECTS) $(struct_refs_LDADD) $(LIBS)
+struct-refs.t$(EXEEXT): $(struct_refs_t_OBJECTS) $(struct_refs_t_DEPENDENCIES) $(EXTRA_struct_refs_t_DEPENDENCIES) 
+	@rm -f struct-refs.t$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(struct_refs_t_OBJECTS) $(struct_refs_t_LDADD) $(LIBS)
 
-struct-shareable$(EXEEXT): $(struct_shareable_OBJECTS) $(struct_shareable_DEPENDENCIES) $(EXTRA_struct_shareable_DEPENDENCIES) 
-	@rm -f struct-shareable$(EXEEXT)
-	$(AM_V_CCLD)$(LINK) $(struct_shareable_OBJECTS) $(struct_shareable_LDADD) $(LIBS)
+struct-shareable.t$(EXEEXT): $(struct_shareable_t_OBJECTS) $(struct_shareable_t_DEPENDENCIES) $(EXTRA_struct_shareable_t_DEPENDENCIES) 
+	@rm -f struct-shareable.t$(EXEEXT)
+	$(AM_V_CCLD)$(LINK) $(struct_shareable_t_OBJECTS) $(struct_shareable_t_LDADD) $(LIBS)
 
 mostlyclean-compile:
 	-rm -f *.$(OBJEXT)
@@ -713,23 +717,23 @@ recheck: all $(check_PROGRAMS)
 	        am__force_recheck=am--force-recheck \
 	        TEST_LOGS="$$log_list"; \
 	exit $$?
-struct-refs.log: struct-refs$(EXEEXT)
-	@p='struct-refs$(EXEEXT)'; \
-	b='struct-refs'; \
+struct-refs.t.log: struct-refs.t$(EXEEXT)
+	@p='struct-refs.t$(EXEEXT)'; \
+	b='struct-refs.t'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
-struct-shareable.log: struct-shareable$(EXEEXT)
-	@p='struct-shareable$(EXEEXT)'; \
-	b='struct-shareable'; \
+struct-shareable.t.log: struct-shareable.t$(EXEEXT)
+	@p='struct-shareable.t$(EXEEXT)'; \
+	b='struct-shareable.t'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
 	"$$tst" $(AM_TESTS_FD_REDIRECT)
-local.log: local$(EXEEXT)
-	@p='local$(EXEEXT)'; \
-	b='local'; \
+local.t.log: local.t$(EXEEXT)
+	@p='local.t$(EXEEXT)'; \
+	b='local.t'; \
 	$(am__check_pre) $(LOG_DRIVER) --test-name "$$f" \
 	--log-file $$b.log --trs-file $$b.trs \
 	$(am__common_driver_flags) $(AM_LOG_DRIVER_FLAGS) $(LOG_DRIVER_FLAGS) -- $(LOG_COMPILE) \
@@ -902,6 +906,8 @@ uninstall-am:
 	mostlyclean-compile mostlyclean-generic pdf pdf-am ps ps-am \
 	recheck tags tags-am uninstall uninstall-am
 
+
+all: $(TESTS)
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
